<resources>
    <string name="app_name">Course-WIKI</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Log in</string>
    <string name="ID">ID</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget?</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="welcome">Welcome</string>
    <string name="personal_data">profile</string>
    <string name="change_password">change</string>
    <string name="log_out">Log out</string>
    <string name="teacher_rank">Teacher score</string>
    <string name="teacher_schedule">Teacher schedule</string>
    <string name="student_chat">Student discuss</string>
    <string name="book_search">Book search</string>
    <string name="course_list">Course List</string>
    <string name="add_member">Add member</string>
    <string name="member_name">name:</string>
    <string name="member_ID">ID:</string>
    <string name="member_password">password:</string>
    <string name="member_identity">identity:</string>
    <string name="asking_for_identity">identity (please type S or T)</string>
    <string name="meber_list">Member List</string>
    <string name="blank_empty">You forget something</string>
    <string name="ID_exist_already">This ID has been used</string>
    <string name="error">ERROR!</string>
    <string name="comment">Comment</string>
    <string name="title_activity_course_list_page">CourseListPage</string>
    <string name="new_course">New Course</string>
    <string name="have_no_permission">You have no permission</string>
    <string name="title_activity_new_course_page">NewCoursePage</string>
    <string name="course_name">Course name</string>
    <string name="course_ID">Course ID</string>
    <string name="score">Score</string>
    <string name="new_comment">New comment</string>
    <string name="teacher">Teacher</string>
    <string name="course_score">Course score</string>
    <string name="title_activity_comment_page"></string>
    <string name="title_activity_new_comment_page">NewCommentPage</string>
    <string name="giving_rank_0to10">Giving rank(from 0~10)</string>
    <string name="giving_rank">Giving rank</string>
    <string name="title_activity_comment_judge">CommentJudge</string>
    <string name="comment_credibility_0to10">Comment credibility(0~10)</string>
    <string name="already_comment">Your already comment</string>
</resources>
