<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.acer.course_wiki.HomePage"
    tools:showIn="@layout/activity_home_page">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/BT_Refresh"
        android:layout_marginTop="34dp"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/textView"
        android:layout_marginTop="34dp"
        android:textSize="30sp"
        android:layout_below="@+id/BT_Refresh"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ID"
        android:id="@+id/textView2"
        android:textSize="23sp"
        android:layout_below="@+id/textView"
        android:layout_toLeftOf="@+id/BT_Refresh"
        android:layout_toStartOf="@+id/BT_Refresh" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView3"
        android:textSize="23sp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_toStartOf="@+id/textView4"
        android:layout_toLeftOf="@+id/textView4" />

    <EditText
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/ET_IDinput"
        android:layout_alignBottom="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="150sp"
        android:layout_height="40sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/ET_PWDinput"
        android:layout_alignBottom="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/BT_LogIn"
        android:layout_below="@+id/ET_PWDinput"
        android:layout_toEndOf="@+id/ET_PWDinput"
        android:textSize="25sp"
        android:layout_toRightOf="@+id/ET_PWDinput" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:id="@+id/BT_Forget"
        android:textSize="25sp"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/BT_LogIn"
        android:layout_alignLeft="@+id/ET_PWDinput"
        android:layout_alignStart="@+id/ET_PWDinput" />
</RelativeLayout>
