<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.acer.course_wiki.comment_page"
    tools:showIn="@layout/activity_comment_page">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LV_CommentListpage"
        android:layout_below="@+id/TV_Teacher"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_comment"
        android:id="@+id/BT_NewComment"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/BT_Refresh"
        android:textSize="25sp"
        android:layout_alignBottom="@+id/BT_NewCourse"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/TV_CourseName"
        android:textSize="20sp"
        android:layout_below="@+id/BT_Refresh"
        android:layout_toLeftOf="@+id/BT_NewComment"
        android:layout_toStartOf="@+id/BT_NewComment" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/TV_CourseID"
        android:textSize="20sp"
        android:layout_below="@+id/TV_CourseName"
        android:layout_alignLeft="@+id/TV_CourseName"
        android:layout_alignStart="@+id/TV_CourseName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_name"
        android:id="@+id/textView4"
        android:layout_below="@+id/BT_Refresh"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_ID"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView4"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:id="@+id/textView14"
        android:layout_below="@+id/textView13"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/TV_Teacher"
        android:textSize="20sp"
        android:layout_below="@+id/TV_CourseID"
        android:layout_alignLeft="@+id/TV_CourseID"
        android:layout_alignStart="@+id/TV_CourseID" />

</RelativeLayout>
